--- a/src/css/polestar.css
+++ b/src/css/polestar.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'polestar';
-  src: url('../fonts/polestar.eot?1564383684');
-  src: url('../fonts/polestar.eot?1564383684#iefix') format('embedded-opentype'),
-       url('../fonts/polestar.woff2?1564383684') format('woff2'),
-       url('../fonts/polestar.woff?1564383684') format('woff'),
-       url('../fonts/polestar.ttf?1564383684') format('truetype'),
-       url('../fonts/polestar.svg?1564383684#fontello') format('svg');
+  src: url('../fonts/polestar.eot?1564983097');
+  src: url('../fonts/polestar.eot?1564983097#iefix') format('embedded-opentype'),
+       url('../fonts/polestar.woff2?1564983097') format('woff2'),
+       url('../fonts/polestar.woff?1564983097') format('woff'),
+       url('../fonts/polestar.ttf?1564983097') format('truetype'),
+       url('../fonts/polestar.svg?1564983097#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -1136,3 +1136,6 @@
 .ps-font-icon-hdd:before { content: '\E43E' } 
 .ps-font-icon-cpu01:before { content: '\E43F' } 
 .ps-font-icon-location:before { content: '\E440' } 
+.ps-font-icon-ar:before { content: '\E441' } 
+.ps-font-icon-gltf:before { content: '\E442' } 
+.ps-font-icon-tangerine:before { content: '\E443' } 
