--- a/src/css/size.css
+++ b/src/css/size.css
@@ -17,3 +17,15 @@
 .icon-5x {
     font-size: 5em;
 }
+.icon-6x {
+    font-size: 6em;
+}
+.icon-7x {
+    font-size: 7em;
+}
+.icon-8x {
+    font-size: 8em;
+}
+.icon-9x {
+    font-size: 9em;
+}
