--- a/src/css/polestar.css
+++ b/src/css/polestar.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'polestar';
-  src: url('../fonts/polestar.eot?1574405285');
-  src: url('../fonts/polestar.eot?1574405285#iefix') format('embedded-opentype'),
-       url('../fonts/polestar.woff2?1574405285') format('woff2'),
-       url('../fonts/polestar.woff?1574405285') format('woff'),
-       url('../fonts/polestar.ttf?1574405285') format('truetype'),
-       url('../fonts/polestar.svg?1574405285#fontello') format('svg');
+  src: url('../fonts/polestar.eot?1586329878');
+  src: url('../fonts/polestar.eot?1586329878#iefix') format('embedded-opentype'),
+       url('../fonts/polestar.woff2?1586329878') format('woff2'),
+       url('../fonts/polestar.woff?1586329878') format('woff'),
+       url('../fonts/polestar.ttf?1586329878') format('truetype'),
+       url('../fonts/polestar.svg?1586329878#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -1235,3 +1235,6 @@
 .ps-font-icon-google-gke:before { content: '\E4A1' } 
 .ps-font-icon-azure-aks:before { content: '\E4A2' } 
 .ps-font-icon-redhat-openshift:before { content: '\E4A3' } 
+.ps-font-icon-file_explorer:before { content: '\E4A4' } 
+.ps-font-icon-registry:before { content: '\E4A5' } 
+.ps-font-icon-registry_value:before { content: '\E4A6' } 
