--- a/src/css/polestar.css
+++ b/src/css/polestar.css
@@ -16,11 +16,12 @@
   font-weight: normal;
   speak: none;
  
-  vertical-align: 5%;
+  /* vertical-align: 5%; */
+  /* line-height: 1em; */
+  width: 1em;
  
   display: inline-block;
   text-decoration: inherit;
-  width: 1em;
   /* margin-right: .2em; */
   text-align: center;
   /* opacity: .8; */
@@ -30,7 +31,6 @@
   text-transform: none;
  
   /* fix buttons height, for twitter bootstrap */
-  line-height: 1em;
  
   /* Animation center compensation - margins should be symmetric */
   /* remove if not needed */
