--- a/src/css/polestar.css
+++ b/src/css/polestar.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'polestar';
-  src: url('../fonts/polestar.eot?1586407800');
-  src: url('../fonts/polestar.eot?1586407800#iefix') format('embedded-opentype'),
-       url('../fonts/polestar.woff2?1586407800') format('woff2'),
-       url('../fonts/polestar.woff?1586407800') format('woff'),
-       url('../fonts/polestar.ttf?1586407800') format('truetype'),
-       url('../fonts/polestar.svg?1586407800#fontello') format('svg');
+  src: url('../fonts/polestar.eot?1591839476');
+  src: url('../fonts/polestar.eot?1591839476#iefix') format('embedded-opentype'),
+       url('../fonts/polestar.woff2?1591839476') format('woff2'),
+       url('../fonts/polestar.woff?1591839476') format('woff'),
+       url('../fonts/polestar.ttf?1591839476') format('truetype'),
+       url('../fonts/polestar.svg?1591839476#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -16,12 +16,11 @@
   font-weight: normal;
   speak: none;
  
-  /* vertical-align: 5%; */
-  /* line-height: 1em; */
-  width: 1em;
+  vertical-align: 5%;
  
   display: inline-block;
   text-decoration: inherit;
+  width: 1em;
   /* margin-right: .2em; */
   text-align: center;
   /* opacity: .8; */
@@ -31,6 +30,7 @@
   text-transform: none;
  
   /* fix buttons height, for twitter bootstrap */
+  line-height: 1em;
  
   /* Animation center compensation - margins should be symmetric */
   /* remove if not needed */
@@ -1238,3 +1238,7 @@
 .ps-font-icon-file-explorer:before { content: '\E4A4' } 
 .ps-font-icon-registry:before { content: '\E4A5' } 
 .ps-font-icon-registry-value:before { content: '\E4A6' } 
+.ps-font-icon-route:before { content: '\E4A7' } 
+.ps-font-icon-routes:before { content: '\E4A8' } 
+.ps-font-icon-resource-quota:before { content: '\E4A9' } 
+.ps-font-icon-resource-quotas:before { content: '\E4AA' } 
