--- a/src/css/polestar.css
+++ b/src/css/polestar.css
@@ -1,11 +1,11 @@
 @font-face {
     font-family: 'polestar';
-    src: url('../fonts/polestar.eot?1592292657');
-    src: url('../fonts/polestar.eot?1592292657#iefix') format('embedded-opentype'),
-         url('../fonts/polestar.woff2?1592292657') format('woff2'),
-         url('../fonts/polestar.woff?1592292657') format('woff'),
-         url('../fonts/polestar.ttf?1592292657') format('truetype'),
-         url('../fonts/polestar.svg?1592292657#fontello') format('svg');
+    src: url('../fonts/polestar.eot?1600326314');
+    src: url('../fonts/polestar.eot?1600326314#iefix') format('embedded-opentype'),
+         url('../fonts/polestar.woff2?1600326314') format('woff2'),
+         url('../fonts/polestar.woff?1600326314') format('woff'),
+         url('../fonts/polestar.ttf?1600326314') format('truetype'),
+         url('../fonts/polestar.svg?1600326314#fontello') format('svg');
     font-weight: normal;
     font-style: normal;
   }
@@ -15,7 +15,9 @@
     font-style: normal;
     font-weight: normal;
     speak: none;
+   
     vertical-align: 5%;
+   
     display: inline-block;
     text-decoration: inherit;
     width: 1em;
@@ -1242,4 +1244,18 @@
   .ps-font-icon-resource-quotas:before { content: '\E4AA' } 
   .ps-font-icon-firmware:before { content: '\E4AB' } 
   .ps-font-icon-gateway-group:before { content: '\E4AC' } 
+  .ps-font-icon-cloudfront:before { content: '\E4AD' } 
+  .ps-font-icon-cloudfront-web:before { content: '\E4AE' } 
+  .ps-font-icon-cloudfront-rtmp:before { content: '\E4AF' } 
+  .ps-font-icon-route53:before { content: '\E4B0' } 
+  .ps-font-icon-route53-domains:before { content: '\E4B1' } 
+  .ps-font-icon-route53-domain:before { content: '\E4B2' } 
+  .ps-font-icon-route53-healthchecks:before { content: '\E4B3' } 
+  .ps-font-icon-route53-healthcheck:before { content: '\E4B4' } 
+  .ps-font-icon-route53-hostedzones:before { content: '\E4B5' } 
+  .ps-font-icon-route53-hostedzone:before { content: '\E4B6' } 
+  .ps-font-icon-dynamodb:before { content: '\E4B7' } 
+  .ps-font-icon-dynamodb-table:before { content: '\E4B8' } 
+  .ps-font-icon-dynamodb-indexes:before { content: '\E4B9' } 
+  .ps-font-icon-dynamodb-index:before { content: '\E4BA' } 
   
