--- a/src/Example/styles/style.css
+++ b/src/Example/styles/style.css
@@ -1,3 +1,11 @@
 .__ps_font-icon__:hover {
-    background-color: beige;
+    background-color: #f5f5f5;
+}
+
+.classname > div {
+    display: flex;
+    margin: 10px 0;
+}
+.classname > div > div {
+    margin: 0 10px;
 }
