--- a/src/css/polestar.css
+++ b/src/css/polestar.css
@@ -1,11 +1,11 @@
 @font-face {
     font-family: 'polestar';
-    src: url('../fonts/polestar.eot?1607403501');
-    src: url('../fonts/polestar.eot?1607403501#iefix') format('embedded-opentype'),
-         url('../fonts/polestar.woff2?1607403501') format('woff2'),
-         url('../fonts/polestar.woff?1607403501') format('woff'),
-         url('../fonts/polestar.ttf?1607403501') format('truetype'),
-         url('../fonts/polestar.svg?1607403501#fontello') format('svg');
+    src: url('../fonts/polestar.eot?1607500325');
+    src: url('../fonts/polestar.eot?1607500325#iefix') format('embedded-opentype'),
+         url('../fonts/polestar.woff2?1607500325') format('woff2'),
+         url('../fonts/polestar.woff?1607500325') format('woff'),
+         url('../fonts/polestar.ttf?1607500325') format('truetype'),
+         url('../fonts/polestar.svg?1607500325#fontello') format('svg');
     font-weight: normal;
     font-style: normal;
   }
@@ -1263,4 +1263,5 @@
   .ps-font-icon-error-round:before { content: '\E4BD' } 
   .ps-font-icon-error-square:before { content: '\E4BE' } 
   .ps-font-icon-more:before { content: '\E4BF' } 
+  .ps-font-icon-sap:before { content: '\E4C0' } 
   
