--- a/src/css/polestar.css
+++ b/src/css/polestar.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'polestar';
-  src: url('../fonts/polestar.eot?1608191127');
-  src: url('../fonts/polestar.eot?1608191127#iefix') format('embedded-opentype'),
-       url('../fonts/polestar.woff2?1608191127') format('woff2'),
-       url('../fonts/polestar.woff?1608191127') format('woff'),
-       url('../fonts/polestar.ttf?1608191127') format('truetype'),
-       url('../fonts/polestar.svg?1608191127#fontello') format('svg');
+  src: url('../fonts/polestar.eot?1608192823');
+  src: url('../fonts/polestar.eot?1608192823#iefix') format('embedded-opentype'),
+       url('../fonts/polestar.woff2?1608192823') format('woff2'),
+       url('../fonts/polestar.woff?1608192823') format('woff'),
+       url('../fonts/polestar.ttf?1608192823') format('truetype'),
+       url('../fonts/polestar.svg?1608192823#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -35,8 +35,8 @@
   /* margin-left: .2em; */
  
   /* you can be more comfortable with increased icons size */
-  /* font-size: 110%; */
- 
+  font-size: 110%;
+
   /* Font smoothing. That was taken from TWBS */
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
