--- a/src/css/polestar.css
+++ b/src/css/polestar.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'polestar';
-  src: url('../fonts/polestar.eot?1608192823');
-  src: url('../fonts/polestar.eot?1608192823#iefix') format('embedded-opentype'),
-       url('../fonts/polestar.woff2?1608192823') format('woff2'),
-       url('../fonts/polestar.woff?1608192823') format('woff'),
-       url('../fonts/polestar.ttf?1608192823') format('truetype'),
-       url('../fonts/polestar.svg?1608192823#fontello') format('svg');
+  src: url('../fonts/polestar.eot?1608512579');
+  src: url('../fonts/polestar.eot?1608512579#iefix') format('embedded-opentype'),
+       url('../fonts/polestar.woff2?1608512579') format('woff2'),
+       url('../fonts/polestar.woff?1608512579') format('woff'),
+       url('../fonts/polestar.ttf?1608512579') format('truetype'),
+       url('../fonts/polestar.svg?1608512579#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -16,6 +16,7 @@
   font-weight: normal;
   speak: none;
  
+  vertical-align: 5%;
   display: inline-block;
   text-decoration: inherit;
   width: 1em;
