--- a/src/css/polestar.css
+++ b/src/css/polestar.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'polestar';
-  src: url('../fonts/polestar.eot?1623058258');
-  src: url('../fonts/polestar.eot?1623058258#iefix') format('embedded-opentype'),
-       url('../fonts/polestar.woff2?1623058258') format('woff2'),
-       url('../fonts/polestar.woff?1623058258') format('woff'),
-       url('../fonts/polestar.ttf?1623058258') format('truetype'),
-       url('../fonts/polestar.svg?1623058258#fontello') format('svg');
+  src: url('../fonts/polestar.eot?1626929057');
+  src: url('../fonts/polestar.eot?1626929057#iefix') format('embedded-opentype'),
+       url('../fonts/polestar.woff2?1626929057') format('woff2'),
+       url('../fonts/polestar.woff?1626929057') format('woff'),
+       url('../fonts/polestar.ttf?1626929057') format('truetype'),
+       url('../fonts/polestar.svg?1626929057#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -1263,3 +1263,4 @@
 .ps-font-icon-error-square:before { content: '\E4BE' } 
 .ps-font-icon-more:before { content: '\E4BF' } 
 .ps-font-icon-sap:before { content: '\E4C0' } 
+.ps-font-icon-hanging_scaffolding:before { content: '\E4C1' } 
