--- a/src/css/polestar.css
+++ b/src/css/polestar.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'polestar';
-  src: url('../fonts/polestar.eot?1637824943');
-  src: url('../fonts/polestar.eot?1637824943#iefix') format('embedded-opentype'),
-       url('../fonts/polestar.woff2?1637824943') format('woff2'),
-       url('../fonts/polestar.woff?1637824943') format('woff'),
-       url('../fonts/polestar.ttf?1637824943') format('truetype'),
-       url('../fonts/polestar.svg?1637824943#fontello') format('svg');
+  src: url('../fonts/polestar.eot?1638237367');
+  src: url('../fonts/polestar.eot?1638237367#iefix') format('embedded-opentype'),
+       url('../fonts/polestar.woff2?1638237367') format('woff2'),
+       url('../fonts/polestar.woff?1638237367') format('woff'),
+       url('../fonts/polestar.ttf?1638237367') format('truetype'),
+       url('../fonts/polestar.svg?1638237367#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -1265,3 +1265,5 @@
 .ps-font-icon-sap:before { content: '\E4C0' } 
 .ps-font-icon-hanging-scaffolding:before { content: '\E4C1' } 
 .ps-font-icon-logfile03:before { content: '\E4C2' } 
+.ps-font-icon-arrest-hook:before { content: '\E4C3' } 
+.ps-font-icon-street-lamp:before { content: '\E4C4' } 
