--- a/src/css/polestar.css
+++ b/src/css/polestar.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'polestar';
-  src: url('../fonts/polestar.eot?1638237367');
-  src: url('../fonts/polestar.eot?1638237367#iefix') format('embedded-opentype'),
-       url('../fonts/polestar.woff2?1638237367') format('woff2'),
-       url('../fonts/polestar.woff?1638237367') format('woff'),
-       url('../fonts/polestar.ttf?1638237367') format('truetype'),
-       url('../fonts/polestar.svg?1638237367#fontello') format('svg');
+  src: url('../fonts/polestar.eot?1648021743');
+  src: url('../fonts/polestar.eot?1648021743#iefix') format('embedded-opentype'),
+       url('../fonts/polestar.woff2?1648021743') format('woff2'),
+       url('../fonts/polestar.woff?1648021743') format('woff'),
+       url('../fonts/polestar.ttf?1648021743') format('truetype'),
+       url('../fonts/polestar.svg?1648021743#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -1267,3 +1267,20 @@
 .ps-font-icon-logfile03:before { content: '\E4C2' } 
 .ps-font-icon-arrest-hook:before { content: '\E4C3' } 
 .ps-font-icon-street-lamp:before { content: '\E4C4' } 
+.ps-font-icon-bar-chart-2:before { content: '\E4C5' } 
+.ps-font-icon-building-1:before { content: '\E4C6' } 
+.ps-font-icon-building-2:before { content: '\E4C7' } 
+.ps-font-icon-certificate-o:before { content: '\E4C8' } 
+.ps-font-icon-clipboard-text-o:before { content: '\E4C9' } 
+.ps-font-icon-dictionary:before { content: '\E4CA' } 
+.ps-font-icon-edit-o:before { content: '\E4CB' } 
+.ps-font-icon-hard-disk:before { content: '\E4CC' } 
+.ps-font-icon-layer-o:before { content: '\E4CD' } 
+.ps-font-icon-layout-o:before { content: '\E4CE' } 
+.ps-font-icon-popup-o:before { content: '\E4CF' } 
+.ps-font-icon-rounded-close:before { content: '\E4D0' } 
+.ps-font-icon-rounded-folder-o:before { content: '\E4D1' } 
+.ps-font-icon-rounded-star-o:before { content: '\E4D2' } 
+.ps-font-icon-rounded-star:before { content: '\E4D3' } 
+.ps-font-icon-settings-o:before { content: '\E4D4' } 
+.ps-font-icon-task-list-o:before { content: '\E4D5' } 
