--- a/src/css/polestar.css
+++ b/src/css/polestar.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'polestar';
-  src: url('../fonts/polestar.eot?1648617927');
-  src: url('../fonts/polestar.eot?1648617927#iefix') format('embedded-opentype'),
-       url('../fonts/polestar.woff2?1648617927') format('woff2'),
-       url('../fonts/polestar.woff?1648617927') format('woff'),
-       url('../fonts/polestar.ttf?1648617927') format('truetype'),
-       url('../fonts/polestar.svg?1648617927#fontello') format('svg');
+  src: url('../fonts/polestar.eot?1657603462');
+  src: url('../fonts/polestar.eot?1657603462#iefix') format('embedded-opentype'),
+       url('../fonts/polestar.woff2?1657603462') format('woff2'),
+       url('../fonts/polestar.woff?1657603462') format('woff'),
+       url('../fonts/polestar.ttf?1657603462') format('truetype'),
+       url('../fonts/polestar.svg?1657603462#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -1295,3 +1295,6 @@
 .ps-font-icon-task-list-error:before { content: '\E4DE' } 
 .ps-font-icon-task-list-time:before { content: '\E4DF' } 
 .ps-font-icon-bullet:before { content: '\E4E0' } 
+.ps-font-icon-clock:before { content: '\E4E1' } 
+.ps-font-icon-add-clock:before { content: '\E4E2' } 
+.ps-font-icon-mongodb:before { content: '\E4E3' } 
