--- a/src/css/polestar.css
+++ b/src/css/polestar.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'polestar';
-  src: url('../fonts/polestar.eot?1657603462');
-  src: url('../fonts/polestar.eot?1657603462#iefix') format('embedded-opentype'),
-       url('../fonts/polestar.woff2?1657603462') format('woff2'),
-       url('../fonts/polestar.woff?1657603462') format('woff'),
-       url('../fonts/polestar.ttf?1657603462') format('truetype'),
-       url('../fonts/polestar.svg?1657603462#fontello') format('svg');
+  src: url('../fonts/polestar.eot?1664321943');
+  src: url('../fonts/polestar.eot?1664321943#iefix') format('embedded-opentype'),
+       url('../fonts/polestar.woff2?1664321943') format('woff2'),
+       url('../fonts/polestar.woff?1664321943') format('woff'),
+       url('../fonts/polestar.ttf?1664321943') format('truetype'),
+       url('../fonts/polestar.svg?1664321943#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -1298,3 +1298,4 @@
 .ps-font-icon-clock:before { content: '\E4E1' } 
 .ps-font-icon-add-clock:before { content: '\E4E2' } 
 .ps-font-icon-mongodb:before { content: '\E4E3' } 
+.ps-font-icon-network-configuration-object:before { content: '\E4E4' } 
