--- a/src/css/polestar.css
+++ b/src/css/polestar.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'polestar';
-  src: url('../fonts/polestar.eot?1664321943');
-  src: url('../fonts/polestar.eot?1664321943#iefix') format('embedded-opentype'),
-       url('../fonts/polestar.woff2?1664321943') format('woff2'),
-       url('../fonts/polestar.woff?1664321943') format('woff'),
-       url('../fonts/polestar.ttf?1664321943') format('truetype'),
-       url('../fonts/polestar.svg?1664321943#fontello') format('svg');
+  src: url('../fonts/polestar.eot?1666593202');
+  src: url('../fonts/polestar.eot?1666593202#iefix') format('embedded-opentype'),
+       url('../fonts/polestar.woff2?1666593202') format('woff2'),
+       url('../fonts/polestar.woff?1666593202') format('woff'),
+       url('../fonts/polestar.ttf?1666593202') format('truetype'),
+       url('../fonts/polestar.svg?1666593202#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -1234,7 +1234,7 @@
 .ps-font-icon-google-gke:before { content: '\E4A1' } 
 .ps-font-icon-azure-aks:before { content: '\E4A2' } 
 .ps-font-icon-redhat-openshift:before { content: '\E4A3' } 
-.ps-font-icon-NameMe.1233:before { content: '\E4A4' } 
+.ps-font-icon-file-explorer:before { content: '\E4A4' } 
 .ps-font-icon-registry:before { content: '\E4A5' } 
 .ps-font-icon-registry-value:before { content: '\E4A6' } 
 .ps-font-icon-route:before { content: '\E4A7' } 
@@ -1299,3 +1299,6 @@
 .ps-font-icon-add-clock:before { content: '\E4E2' } 
 .ps-font-icon-mongodb:before { content: '\E4E3' } 
 .ps-font-icon-network-configuration-object:before { content: '\E4E4' } 
+.ps-font-icon-pie-chart-o:before { content: '\E4E5' } 
+.ps-font-icon-tip:before { content: '\E4E6' } 
+.ps-font-icon-gims:before { content: '\E4E7' } 
